[gd_scene load_steps=2 format=3 uid="uid://dbuptiil5ai4c"]

[ext_resource type="Script" uid="uid://8wy0po0hsnfm" path="res://scenes/Dashboard.gd" id="1_sss21"]

[node name="Dashboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sss21")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Aventurier"

[node name="LevelLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Niveau : 1"

[node name="XpProgressBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2

[node name="XpLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "0 / 10 XP"
